# aeron-ipc-bridge

./: README.md
docs/: message-format.md
java/: .gitignore  build.gradle  settings.gradle
java/src/main/java/com/crypto/marketdata/: AeronConfig.java  HighThroughputProducer.java  MarketDataMessage.java  MediaDriverLauncher.java  MessageExample.java  Producer.java
java/src/test/java/com/crypto/marketdata/: MarketDataMessageTest.java
rust/: Cargo.toml
rust/src/: lib.rs
